aoc/2024/22: give functions names for easier profiling